# computer-graphics-uzh-fs24

./: .gitignore
Exercise1/: README.md
Exercise1/src/: Cube.vert  GLExample.cpp  GLExample.h  TorusKnot.cpp  TorusKnot.h
Exercise2/: README.md
Exercise2/shader/: Normals.vert  Shape.vert
Exercise2/src/: Cube.h  GLExercise.cpp  GLExercise.h  MultiLine.cpp  MultiLine.h  ShaderProgram.cpp  ShaderProgram.h  Shape.cpp  Shape.h  Torus.cpp  Torus.h  main.cpp
Exercise3/: README.md
Exercise3/shader/: Shape.frag  Shape.vert
Exercise3/src/: GLExample.cpp
Exercise4/: CMakeLists.txt  README.md
Exercise4/imgui/: Makefile  cmake_install.cmake
Exercise4/shader/: BasicShape.vert  TexturedNormals.vert  TexturedShape.frag  TexturedShape.vert
Exercise4/src/: Cube.cpp  GLExample.cpp  GLExample.h  Texture.cpp  Texture.h  Torus.cpp
Exercise5/: CMakeLists.txt  README.md
Exercise5/shader/: Shadows.frag  Shadows.vert  Shape.frag  Shape.vert
Exercise5/src/: Camera.cpp  Camera.h  Cube.cpp  Cube.h  GLApp.cpp  GLApp.h  GLExercise.cpp  GLExercise.h  MultiLine.h  Quad.cpp  Quad.h  Shape.cpp  Shape.h  Texture.cpp  Torus.cpp  main.cpp
Exercise6/: CMakeLists.txt  README.md
Exercise6/src/: Cube.cpp  GLExample.cpp  GLExample.h  ray_tracer.cpp  ray_tracer.h
